# ChaosKit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cpp  cmake-format.yaml  lol.cpp  lol_test.cpp
ast/: AffineTransform.h  BaseMultiTransform.h  BinaryFunction.cpp  BinaryFunction.h  Blend.cpp  Blend.h  CMakeLists.txt  Expression.h  Formula.cpp  Formula.h  Input.cpp  Input.h  LimitedBlend.cpp  LimitedBlend.h  MultiStepTransform.h  Node.cpp  Node.h  Number.h  Output.cpp  Output.h  Parameter.cpp  Parameter.h  PositionTransform.h  RandomChoiceTransform.h  RandomNumber.cpp  RandomNumber.h  StaticAffineTransform.cpp  StaticAffineTransform.h  System.cpp  System.h  Transform.cpp  Transform.h  TransformVariant.h  TransformWithWeight.h  UnaryFunction.cpp  UnaryFunction.h  VariableDeclaration.cpp  VariableDeclaration.h  VariableName.cpp  VariableName.h  (+21 more)
core/: BlackWhiteColorMap.h  Blend.h  CMakeLists.txt  CameraSystem.h  CameraSystemProcessor.cpp  CameraSystemProcessor.h  CameraSystemProcessorTest.cpp  Color.h  ColorMap.h  ColorMapRegistry.cpp  ColorMapRegistry.h  DocumentDeleter.h  DocumentVisitor.h  ExpressionInterpreter.cpp  ExpressionInterpreter.h  ExpressionInterpreterTest.cpp  Formula.h  Generator.h  HistogramBuffer.cpp  HistogramBuffer.h  HistogramColor.h  ManagedDocument.cpp  ManagedDocument.h  PaletteColorMap.cpp  PaletteColorMap.h  Params.h  Particle.h  Point.cpp  Point.h  RainbowColorMap.cpp  RainbowColorMap.h  Renderer.h  Rng.h  SimpleBlender.cpp  SimpleBlender.h  SimpleGenerator.cpp  SimpleGenerator.h  SimpleHistogramGenerator.cpp  SimpleHistogramGenerator.h  SimpleInterpreter.cpp  (+30 more)
core/models/: BlendModel.cpp  BlendModel.h  CMakeLists.txt  DocumentModel.cpp  DocumentModel.h  FormulaModel.cpp  FormulaModel.h  GlobalStore.cpp  GlobalStore.h  Model.h  ModelCollection.h  SystemModel.cpp  SystemModel.h
core/structures/: Blend.h  CMakeLists.txt  ColoringMethod.h  Document.h  Formula.h  System.h  Transform.h  hierarchy.h
core/testing/: MockRng.h  StaticRng.h
flame/: Blend.h  CMakeLists.txt  ColoringMethod.h  Document.h  DocumentDeleter.cpp  DocumentDeleter.h  DocumentVisitor.h  Formula.h  ManagedDocument.cpp  ManagedDocument.h  Params.h  System.h  SystemIndex.h  Transform.h  hierarchy.h  toAst.cpp  toAst.h  toParams.cpp  toParams.h  toSource.cpp  toSource.h  toSystem.cpp  toSystem.h  toTransform.cpp  toTransform.h  transforms.cpp  transforms.h  util.cpp  util.h
io/: CMakeLists.txt  chaoskit.proto  io.cpp  io.h
state/: CMakeLists.txt  HierarchicalStore.h  HierarchicalStore_test.cpp  Id.h  Id_test.cpp  Store.h  Store_test.cpp  hierarchy.h  hierarchy_test.cpp
stdx/: CMakeLists.txt  optional.h
ui/: BlendModel.cpp  BlendModel.h  BlenderTask.cpp  BlenderTask.h  CMakeLists.txt  ColorMap.h  ColorMapPreviewProvider.cpp  ColorMapPreviewProvider.h  ColorMapRegistry.cpp  ColorMapRegistry.h  DocumentAdopter.cpp  DocumentAdopter.h  DocumentModel.cpp  DocumentModel.h  DocumentProxy.cpp  DocumentProxy.h  DocumentStore.h  Editor.qml  EmptyOptionsForm.cpp  EmptyOptionsForm.h  EmptyOptionsForm.ui  EngineManager.cpp  EngineManager.h  FlatteningModel.cpp  FlatteningModel.h  FormulaPreviewProvider.cpp  FormulaPreviewProvider.h  GLToneMapper.cpp  GLToneMapper.h  GathererTask.cpp  GathererTask.h  GlobalStore.cpp  GlobalStore.h  HistogramBuffer.h  HistogramGenerator.cpp  HistogramGenerator.h  HotReloader.cpp  HotReloader.h  MainWindow.cpp  MainWindow.h  (+44 more)
ui/ChaosKit/: ApplicationWindow.qml  Button.qml  CheckBox.qml  Chip.qml  CollapsibleHeading.qml  ComboBox.qml  Fab.qml  Heading.qml  Icon.qml  IconButton.qml  ItemDelegate.qml  ItemPlaceholder.qml  Label.qml  NumberField.qml  OutlinedButton.qml  Popup.qml  RadioButton.qml  RoundButton.qml  Separator.qml  Slider.qml  Snackbar.qml  SpinBox.qml  Subheading.qml  Switch.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  TextLabel.qml  Theme.qml  ToolTip.qml  qmldir
ui/controls/: Button.qml  IconButton.qml  Slider.qml  SymbolButton.qml  TransformControl.qml
ui/forms/: AddFormulaForm.qml  AstInspector.qml  BlendContents.qml  BlendEditor.qml  BlendIndicator.qml  BlendItem.qml  BlendListItem.qml  BlendOptionsForm.qml  BlendRow.qml  BlendSettings.qml  ColorMapEditor.qml  ColumnRail.qml  DocumentEditor.qml  DocumentOptionsForm.qml  Editor.qml  EditorTabButton.qml  EditorTabs.qml  ExportImageDialog.qml  FinalBlendIndicator.qml  FormulaCard.qml  FormulaGallery.qml  FormulaGroupItem.qml  FormulaItem.qml  FormulaList.qml  FormulaListItem.qml  FormulaOptionsForm.qml  FormulaParams.qml  FormulaPicker.qml  FormulaPopup.qml  FormulaSettings.qml  ImageEditor.qml  ImageSizeEditor.qml  LifetimeEditor.qml  MainMenu.qml  MainWindow.qml  ProjectEditor.qml  RenderingForm.qml  StructureEditor.qml  StructureForm.qml  SystemEditor.qml  (+8 more)
ui/models/: BaseModel.h  Blend.cpp  Blend.h  BlendModel.cpp  BlendModel.h  CMakeLists.txt  ColorMapModel.cpp  ColorMapModel.h  ColorMapRegistry.cpp  ColorMapRegistry.h  ColoringMethodModel.cpp  ColoringMethodModel.h  Formula.cpp  Formula.h  FormulaModel.cpp  FormulaModel.h  ModelFactory.cpp  ModelFactory.h  ProjectModel.cpp  ProjectModel.h  System.cpp  System.h  SystemModel.cpp  SystemModel.h  TransformModel.cpp  TransformModel.h  toSource.cpp  toSource.h
ui/resources/: Constants.qml  ElementType.qml  Fonts.qml  Icons.qml  generate-fa-qml.rb  qmldir
ui/storage/: CMakeLists.txt  chaoskit.proto  conversions.cpp  conversions.h  conversions_test.cpp  storage.cpp  storage.h
